8320655: remove volatiles and do explicit cleanup on failure